fixed text size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -48,17 +48,20 @@ body {
 .text-area h3 {
   text-align: center;
   font-family: "Pacifico", cursive;
+  font-size: 1.5rem;
 }
 
 .text-area h5 {
   text-align: center;
   font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  font-size: 0.8rem;
 }
 
 .text-area h5 {
   text-align: center;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 .btn {
